--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Bolsa Empleo</title>
   <base href="/">
+<!--  <base href="http://yavirac.edu.ec/bolsa-empleo/client/">-->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
